packages/dnb-eufemia/src/extensions/forms/Field/Time/style/dnb-time.scss
.dnb-forms-field-time {
  width: fit-content;

  .dnb-forms-field-block__contents {
    width: fit-content;
  }

  .dnb-segmented-field__fieldset {
    width: var(--forms-field-width--small);
  }

  .dnb-segmented-field__group > .dnb-segmented-field__section:first-child {
    padding: 0 0.25rem 0 0.75rem;
  }
}

